E2E test with elasticsearch embedded