@@ -82,6 +82,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-codecs</artifactId>
+      <version>4.10.4</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
@@ -149,6 +155,7 @@
         <version>2.18.1</version>
         <configuration>
           <skip>true</skip>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
           <systemPropertyVariables>
             <classpath>${project.basedir}/extlib</classpath>
           </systemPropertyVariables>
@@ -161,7 +168,7 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <skip>true</skip>
+              <skip>false</skip>
               <includes>
                 <include>**/**/**/*Test.java</include>
               </includes>
